REGRESSION (r94492): Text is shifted to the right in some buttons in the Mac App Store https://bugs.webkit.org/show_bug.cgi?id=74723

Reviewed by Dan Bernstein.

Source/WebCore:

Tests: fast/css/absolute-inline-alignment-2.html
       fast/css/absolute-inline-alignment.html

Inline positioned elements in the leading spaces of an inline run need to align to
adjacent text, so add them to the run as they're encountered.

* rendering/RenderBlockLineLayout.cpp:
(WebCore::LineInfo::LineInfo): Keep a count of positioned objects encountered when
 skipping leading whitespace.
(WebCore::LineInfo::runsFromLeadingWhitespace):
(WebCore::LineInfo::resetRunsFromLeadingWhitespace):
(WebCore::LineInfo::incrementRunsFromLeadingWhitespace):
(WebCore::RenderBlock::constructLine): Leading positioned objects should not be considered
 when deciding the number of runs in a line. Otherwise they would contribute towards line
 height themselves and prevent a free-standing BR following the positioned object from providing a full
 20px of height.
(WebCore::RenderBlock::layoutRunsAndFloatsInRange): Since a run containing line-breaks will enter
 skipLeadingWhitespace for each new line we reset the count every time so that the count of positioned
 objects we encounter only affects the line they appear on. This case is covered by
 fast/inline/styledEmptyInlinesWithBRs.html
(WebCore::RenderBlock::LineBreaker::skipLeadingWhitespace): Add a run for each inline positioned object
 encountered in leading white space. Keep a count of them so that they can be excluded from
 the total number of runs in constructLine.

LayoutTests:

* fast/css/absolute-inline-alignment-2-expected.html: Added.
* fast/css/absolute-inline-alignment-2.html: Added.
* fast/css/absolute-inline-alignment-expected.html: Added.
* fast/css/absolute-inline-alignment.html: Added.

Canonical link: https://commits.webkit.org/92149@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@103851 268f45cc-cd09-0410-ab3c-d52691b4dbfc